feat(trino): Phase 6 complete — live docker-compose E2E passing
Finished the functional connector and got the full stack working:
Trino -> connector -> Sidecar discovery -> token-range splits ->
cqlite-flight DoGet -> compaction merge -> Arrow -> Trino.

E2E fixes uncovered by the live run:
- .dockerignore (build context was 12GB incl. target/, filled docker disk)
- drop LOCAL_JMX=no (broke nodetool healthcheck + Sidecar JMX)
- Sidecar config mounts at /conf/sidecar.yaml; instance host must match the
  client-facing address (172.42.0.2); add driver_parameters.contact_points
  for its CQL session
- ring returns a bare JSON array -> fix parseRing
- token-range-replicas gives ip:storage_port -> strip to host (hostOnly)
- mount Trino jvm.config with --add-opens java.base/java.nio for Arrow

Sidecar shares Cassandra's IP via network_mode: service:cassandra.

Validated on analytics.events (5 rows, flushed): SELECT *, projection,
WHERE score>25 (3 rows), count/sum/avg = 5/150/30.0, active=true (3 rows)
— all correct. 20 connector tests green.

Refs: docs/flight-trino/PLAN.md (Phase 6)